<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.10">
  <POU Name="InterfaceControlV1" Id="{bd206c09-8ce6-427d-b5d8-5f734ed43bc9}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK InterfaceControlV1
VAR_INPUT
	currentMode : eOperationModes;
	pbGreen : BOOL; //start
	pbRed : BOOL;	//stop
	pbYellow: BOOL; //error reset
	//
	errorType : DWORD;
	errorIndex : DWORD;
	errorCode : LWORD;
END_VAR
VAR_OUTPUT
	requestMode : eOperationModes;
	requestInit : BOOL;
	errorClear : eErrorClearWays;
		
	mMonitorDatas:ARRAY[1..8] OF DWORD;
END_VAR
VAR
	comm AT%MB256 : commUnitController;
	
	errorCodePointer : POINTER TO DWORD;
END_VAR
VAR CONSTANT
	bErrorReset : INT := 0;
	bPause : INT :=1;
	bInitialize : INT :=2;
	bManualMode : INT :=3;
	bErrorIgnore : INT :=4;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//Start/Stop/Manual
CASE currentMode OF
	eOperationModes.AUTO:
		IF comm.control.bPause OR pbRed THEN
			requestMode := eOperationModes.SEMI_AUTO;
		END_IF
		comm.controlWord.2 := FALSE;
	eOperationModes.SEMI_AUTO:
		IF comm.control.bManualMode THEN
			//higher priority
			requestMode := eOperationModes.MANUAL;
		ELSIF comm.control.bPause OR pbGreen THEN
			requestMode := eOperationModes.AUTO;
		END_IF
		comm.controlWord.2 := TRUE; //pause state
	eOperationModes.MANUAL:
		IF not comm.control.bManualMode THEN
			requestMode := eOperationModes.SEMI_AUTO;
		END_IF
		comm.controlWord.2 := TRUE; //pause state
END_CASE
//Initialization
requestInit := comm.control.bInitialize;
//Error clear request
errorClear := eErrorClearWays.NO_ACTION;
IF comm.control.bErrorReset OR pbYellow THEN
	errorClear := eErrorClearWays.RESET;
ELSIF comm.control.bErrorIgnore THEN
	errorClear := eErrorClearWays.IGNORE;	
END_IF
//one-shot control clear , except bManualMode
comm.control := 16#8 AND comm.control;
//error infomation
comm.errorType := errorType;
comm.errorIndex := errorIndex;
errorCodePointer := ADR(errorCode);
comm.errorCode1 := errorCodePointer[0]; //seperated
comm.errorCode2 := errorCodePointer[1]; //seperated]]></ST>
    </Implementation>
    <Method Name="ErrorInfomation" Id="{3573c2e7-6b1f-47f1-a5a9-6f10bd5c5031}">
      <Declaration><![CDATA[METHOD ErrorInfomation : BOOL
VAR_INPUT
	mErrorIndex : INT;
	mErrorType : eCategrories;
	mErrorCode : UDINT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[comm.errorIndex := TO_DWORD(mErrorIndex);
comm.errorType := mErrorType;
comm.errorCode1 := mErrorCode;]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="InterfaceControlV1">
      <LineId Id="383" Count="34" />
      <LineId Id="420" Count="0" />
      <LineId Id="165" Count="0" />
      <LineId Id="421" Count="0" />
    </LineIds>
    <LineIds Name="InterfaceControlV1.ErrorInfomation">
      <LineId Id="5" Count="0" />
      <LineId Id="9" Count="1" />
    </LineIds>
  </POU>
</TcPlcObject>